# GitHub-api-LangGraph-demo

./: README.md
frontend/: index.html  package.json  server.js
obsolete setup/frontend/: package-lock.json
obsolete setup/server/: my_app.txt
obsolete setup/server/github_api_langgraph_demo/: ai.py
presentation/: my_app-step-3-mcp.txt  requirements.txt  server-step4-mcp.ipynb  web_server_context.txt
presentation/old/: frontend.ipynb  server-step4.ipynb  server.ipynb
presentattion/: frontend.ipynb  my_app-step-3-mcp.txt  my_app-step-3.txt  my_app-step-3_1.txt  my_app-step-4-mcp.txt  my_app-step-4.txt  my_app.txt  my_app1.txt  my_app2.txt  presentation.ipynb  server-step1.ipynb  server-step2.ipynb  server-step3-mcp.ipynb  server-step3.ipynb  server-step4-mcp.ipynb  server-step4.ipynb  web_server_context.txt
presentattion/old/: my_app-step-1-2.txt  server-step1.ipynb  server-step2.ipynb
server/: client_secret  github_app_private_key.pem  my_app.txt  pyproject.toml
server/github_api_langgraph_demo/: ai.py  app.py
